// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page <Flavors /> renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="container-fluid"
  >
    <div
      className="text-center row"
    >
      <div
        className="col"
      >
        <h1>
          Flavors
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="text-center col"
      >
        <small>
          Log in to Enable Flavor Stash
        </small>
      </div>
    </div>
    <div
      className="container-fluid"
    >
      <div
        className="pb-2 row"
      >
        <div
          className="col-3"
        >
          <input
            className="form-control"
            max="200"
            min="20"
            onBlur={[Function]}
            onChange={[Function]}
            step="20"
            type="number"
            value={20}
          />
        </div>
        <div
          className="text-right col"
        >
          <select
            onBlur={[Function]}
            onChange={[Function]}
            value={1}
          >
            <option
              value={1}
            >
              Page 
              1
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
  <div
    className="table-responsive"
  >
    <table
      className="table table-sm table-striped table-bordered table-hover"
    >
      <thead>
        <tr
          className="text-center"
        >
          <th>
            ID
          </th>
          <th>
            Vendor
          </th>
          <th>
            Name
          </th>
          <th>
            Slug
          </th>
          <th>
            Density
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="pb-2 row"
    >
      <div
        className="col-3"
      >
        <input
          className="form-control"
          max="200"
          min="20"
          onBlur={[Function]}
          onChange={[Function]}
          step="20"
          type="number"
          value={20}
        />
      </div>
      <div
        className="text-right col"
      >
        <select
          onBlur={[Function]}
          onChange={[Function]}
          value={1}
        >
          <option
            value={1}
          >
            Page 
            1
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
         
        Flavors
      </div>
      <div
        className="text-right col"
      >
         Pages
      </div>
    </div>
  </div>
</div>
`;

exports[`Page <Flavors /> renders correctly when stash is not loaded 1`] = `
<div
  className="container"
>
  <div
    className="container-fluid"
  >
    <div
      className="text-center row"
    >
      <div
        className="col"
      >
        <h1>
          Flavors
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="text-center col"
      >
        <form
          className=""
        >
          <div
            className="form-check"
          >
            <input
              className="form-check-input"
              disabled={false}
              id="flavorStash"
              name="stashToggle"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="flavorStash"
              title=""
              type="checkbox"
            >
               Enable Flavor Stash
            </label>
          </div>
        </form>
      </div>
    </div>
    <p />
  </div>
  <div
    className="table-responsive"
  >
    <table
      className="table table-sm table-striped table-bordered table-hover"
    >
      <thead>
        <tr
          className="text-center"
        >
          <th>
            ID
          </th>
          <th>
            Vendor
          </th>
          <th>
            Name
          </th>
          <th>
            Slug
          </th>
          <th>
            Density
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="text-center"
          >
            1
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Bears
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            2
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Fish
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            3
          </td>
          <td>
            Capella
          </td>
          <td>
            Acai
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            4
          </td>
          <td>
            Capella
          </td>
          <td>
            Amaretto
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            5
          </td>
          <td>
            Capella
          </td>
          <td>
            Anise
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <p />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
        5
         
        Flavors
      </div>
      <div
        className="text-right col"
      >
        1
         Pages
      </div>
    </div>
  </div>
</div>
`;

exports[`Page <Flavors /> renders correctly when user is not logged in 1`] = `
<div
  className="container"
>
  <div
    className="container-fluid"
  >
    <div
      className="text-center row"
    >
      <div
        className="col"
      >
        <h1>
          Flavors
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="text-center col"
      >
        <small>
          Log in to Enable Flavor Stash
        </small>
      </div>
    </div>
    <p />
  </div>
  <div
    className="table-responsive"
  >
    <table
      className="table table-sm table-striped table-bordered table-hover"
    >
      <thead>
        <tr
          className="text-center"
        >
          <th>
            ID
          </th>
          <th>
            Vendor
          </th>
          <th>
            Name
          </th>
          <th>
            Slug
          </th>
          <th>
            Density
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            className="text-center"
          >
            1
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Bears
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            2
          </td>
          <td>
            Capella
          </td>
          <td>
            27 Fish
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            3
          </td>
          <td>
            Capella
          </td>
          <td>
            Acai
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            4
          </td>
          <td>
            Capella
          </td>
          <td>
            Amaretto
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
        <tr>
          <td
            className="text-center"
          >
            5
          </td>
          <td>
            Capella
          </td>
          <td>
            Anise
          </td>
          <td
            className="text-center"
          />
          <td
            className="text-center"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <p />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
        5
         
        Flavors
      </div>
      <div
        className="text-right col"
      >
        1
         Pages
      </div>
    </div>
  </div>
</div>
`;

exports[`Page <Flavors /> renders current user flavors correctly 1`] = `[Function]`;
